feat(email-notification-scheduler): wire @Scheduled triggers (p3)
- NotificationScheduler: daily cron 08:00 Warsaw + hourly retry
- Fix LazyInitializationException: ObligationRepository.findAllWithUser() JOIN FETCH
- Fix @Transactional self-invocation: extract to NotificationPersistenceService

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>