@@ -1,8 +1,6 @@
 package com.example.finance_hq.notification;
 
 import com.example.finance_hq.obligation.Obligation;
-import com.example.finance_hq.obligation.ObligationPeriod;
-import com.example.finance_hq.obligation.ObligationRepository;
 import com.example.finance_hq.obligation.ObligationService;
 import com.example.finance_hq.user.User;
 import org.slf4j.Logger;
@@ -12,10 +10,8 @@ import org.springframework.mail.MailException;
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -26,19 +22,19 @@ public class NotificationService {
     private static final Logger log = LoggerFactory.getLogger(NotificationService.class);
 
     private final ObligationService obligationService;
-    private final ObligationRepository obligationRepository;
     private final NotificationLogRepository notificationLogRepository;
+    private final NotificationPersistenceService persistenceService;
     private final JavaMailSender mailSender;
     private final String fromAddress;
 
     public NotificationService(ObligationService obligationService,
-                               ObligationRepository obligationRepository,
                                NotificationLogRepository notificationLogRepository,
+                               NotificationPersistenceService persistenceService,
                                JavaMailSender mailSender,
                                @Value("${spring.mail.username}") String fromAddress) {
         this.obligationService = obligationService;
-        this.obligationRepository = obligationRepository;
         this.notificationLogRepository = notificationLogRepository;
+        this.persistenceService = persistenceService;
         this.mailSender = mailSender;
         this.fromAddress = fromAddress;
     }
@@ -57,14 +53,14 @@ public class NotificationService {
                         t.obligation().getUser().getId() + ":" + t.nextDueDate()));
 
         byUserAndDate.forEach((key, userTargets) -> {
-            User user = userTargets.get(0).obligation().getUser();
-            LocalDate dueDate = userTargets.get(0).nextDueDate();
+            User user = userTargets.getFirst().obligation().getUser();
+            LocalDate dueDate = userTargets.getFirst().nextDueDate();
             try {
                 sendGroupedEmail(user, userTargets, dueDate);
-                recordSuccess(userTargets);
+                persistenceService.recordSuccess(userTargets);
             } catch (MailException e) {
                 log.error("Failed to send notification to {}: {}", user.getEmail(), e.getMessage());
-                recordFailure(userTargets);
+                persistenceService.recordFailure(userTargets);
             }
         });
     }
@@ -78,12 +74,12 @@ public class NotificationService {
                         nl.getObligation().getUser().getId() + ":" + nl.getDueDate()));
 
         byGroup.forEach((key, logs) -> {
-            User user = logs.get(0).getObligation().getUser();
-            LocalDate dueDate = logs.get(0).getDueDate();
+            User user = logs.getFirst().getObligation().getUser();
+            LocalDate dueDate = logs.getFirst().getDueDate();
             List<Obligation> obligations = logs.stream().map(NotificationLog::getObligation).toList();
             try {
                 sendGroupedEmailForObligations(user, obligations, dueDate);
-                markRetrySuccess(logs);
+                persistenceService.markRetrySuccess(logs);
             } catch (MailException e) {
                 log.error("Retry failed for {}: {}", user.getEmail(), e.getMessage());
             }
@@ -110,44 +106,5 @@ public class NotificationService {
         message.setSubject("FinanceHQ: " + n + " payment(s) due " + dueDate);
         message.setText(body.toString());
         mailSender.send(message);
-    }
-
-    @Transactional
-    private void recordSuccess(List<ObligationService.SchedulerTarget> targets) {
-        LocalDateTime now = LocalDateTime.now();
-        for (ObligationService.SchedulerTarget t : targets) {
-            NotificationLog entry = new NotificationLog(t.obligation(), t.nextDueDate(), NotificationStatus.SENT);
-            entry.setSentAt(now);
-            notificationLogRepository.save(entry);
-            decrementIfFixedTerm(t.obligation());
-        }
-    }
-
-    @Transactional
-    private void recordFailure(List<ObligationService.SchedulerTarget> targets) {
-        for (ObligationService.SchedulerTarget t : targets) {
-            notificationLogRepository.save(
-                    new NotificationLog(t.obligation(), t.nextDueDate(), NotificationStatus.FAILED));
-        }
-    }
-
-    @Transactional
-    private void markRetrySuccess(List<NotificationLog> logs) {
-        LocalDateTime now = LocalDateTime.now();
-        for (NotificationLog nl : logs) {
-            nl.setStatus(NotificationStatus.SENT);
-            nl.setSentAt(now);
-            notificationLogRepository.save(nl);
-            decrementIfFixedTerm(nl.getObligation());
-        }
-    }
-
-    private void decrementIfFixedTerm(Obligation obligation) {
-        if (obligation.getPeriod() == ObligationPeriod.FIXED_TERM
-                && obligation.getRemainingPayments() != null
-                && obligation.getRemainingPayments() > 0) {
-            obligation.setRemainingPayments(obligation.getRemainingPayments() - 1);
-            obligationRepository.save(obligation);
-        }
     }
 }
